# pandabutt

./: Cargo.toml  readme.md
migrations/: 20250607_basic_app.sql
public/: index.html  main.js
src/: backend.rs  main.rs  myplan.txt  node.rs  operation.rs  readme.md  topic.rs  utils.rs
