[package]
name = "panda-butt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.85"
ciborium = "0.2.2"
p2panda-core = { version = "0.3.1"}
p2panda-discovery = { version = "0.3.1" }
p2panda-net = { version = "0.3.1"}
p2panda-store = { version = "0.3.1", features = ["sqlite"] }
p2panda-stream = { version = "0.3.1" }
p2panda-sync = { version = "0.3.1" }
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["macros"] }
tokio-stream = "0.1.17"

[dev-dependencies]
tokio = { version = "1.42.0", features = ["macros", "rt"] }
