[package]
name = "panda-butt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.85"
ciborium = "0.2.2"
p2panda-core = { git = "https://github.com/p2panda/p2panda.git", rev="085a57206aeae70142176c0777ed2febc7b98664"}
p2panda-discovery = {git = "https://github.com/p2panda/p2panda.git", rev="085a57206aeae70142176c0777ed2febc7b98664" }
p2panda-net = { git = "https://github.com/p2panda/p2panda.git", rev="085a57206aeae70142176c0777ed2febc7b98664"}
p2panda-store = { git = "https://github.com/p2panda/p2panda.git", rev="085a57206aeae70142176c0777ed2febc7b98664", features = ["sqlite"] }
p2panda-stream = { git = "https://github.com/p2panda/p2panda.git", rev="085a57206aeae70142176c0777ed2febc7b98664" }
p2panda-sync = { git = "https://github.com/p2panda/p2panda.git", rev="085a57206aeae70142176c0777ed2febc7b98664", features = ["log-sync"]}
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["macros"] }
tokio-stream = "0.1.17"
sqlx = {version = "0.8.3", features = ["sqlite", "runtime-tokio"] }

[dev-dependencies]
tokio = { version = "1.42.0", features = ["macros", "rt"] }
